examples/test/testpolicy15354.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15354
  namespace: namespace234
spec:
  podSelector:
    matchLabels:
      key3: value24
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key48: value29
          key13: value6
      podSelector:
        matchLabels:
          key10: value15
          key35: value46
          key8: value3
